--- a/ipython_notebook/try_parsing.ipynb
+++ b/ipython_notebook/try_parsing.ipynb
@@ -88,7 +88,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -99,99 +99,31 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "df.ix[df.num_resources > 1]['resources'].head()"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "html": [
-        "<pre>\n",
-        "&ltclass 'pandas.core.frame.DataFrame'&gt\n",
-        "Int64Index: 1130 entries, 0 to 1129\n",
-        "Data columns (total 32 columns):\n",
-        "author                      1130  non-null values\n",
-        "author_email                32  non-null values\n",
-        "extras                      1130  non-null values\n",
-        "groups                      1130  non-null values\n",
-        "id                          1130  non-null values\n",
-        "isopen                      1130  non-null values\n",
-        "license_id                  1129  non-null values\n",
-        "license_title               1129  non-null values\n",
-        "license_url                 817  non-null values\n",
-        "maintainer                  1130  non-null values\n",
-        "maintainer_email            32  non-null values\n",
-        "metadata_created            1130  non-null values\n",
-        "metadata_modified           1130  non-null values\n",
-        "name                        1130  non-null values\n",
-        "notes                       1130  non-null values\n",
-        "num_resources               1130  non-null values\n",
-        "num_tags                    1130  non-null values\n",
-        "organization                1126  non-null values\n",
-        "owner_org                   1126  non-null values\n",
-        "private                     1130  non-null values\n",
-        "relationships_as_object     1130  non-null values\n",
-        "relationships_as_subject    1130  non-null values\n",
-        "resources                   1130  non-null values\n",
-        "revision_id                 1130  non-null values\n",
-        "revision_timestamp          1130  non-null values\n",
-        "state                       1130  non-null values\n",
-        "tags                        1130  non-null values\n",
-        "title                       1130  non-null values\n",
-        "tracking_summary            1130  non-null values\n",
-        "type                        1130  non-null values\n",
-        "url                         1109  non-null values\n",
-        "version                     0  non-null values\n",
-        "dtypes: bool(2), int64(2), object(28)\n",
-        "</pre>"
-       ],
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 17,
        "text": [
-        "<class 'pandas.core.frame.DataFrame'>\n",
-        "Int64Index: 1130 entries, 0 to 1129\n",
-        "Data columns (total 32 columns):\n",
-        "author                      1130  non-null values\n",
-        "author_email                32  non-null values\n",
-        "extras                      1130  non-null values\n",
-        "groups                      1130  non-null values\n",
-        "id                          1130  non-null values\n",
-        "isopen                      1130  non-null values\n",
-        "license_id                  1129  non-null values\n",
-        "license_title               1129  non-null values\n",
-        "license_url                 817  non-null values\n",
-        "maintainer                  1130  non-null values\n",
-        "maintainer_email            32  non-null values\n",
-        "metadata_created            1130  non-null values\n",
-        "metadata_modified           1130  non-null values\n",
-        "name                        1130  non-null values\n",
-        "notes                       1130  non-null values\n",
-        "num_resources               1130  non-null values\n",
-        "num_tags                    1130  non-null values\n",
-        "organization                1126  non-null values\n",
-        "owner_org                   1126  non-null values\n",
-        "private                     1130  non-null values\n",
-        "relationships_as_object     1130  non-null values\n",
-        "relationships_as_subject    1130  non-null values\n",
-        "resources                   1130  non-null values\n",
-        "revision_id                 1130  non-null values\n",
-        "revision_timestamp          1130  non-null values\n",
-        "state                       1130  non-null values\n",
-        "tags                        1130  non-null values\n",
-        "title                       1130  non-null values\n",
-        "tracking_summary            1130  non-null values\n",
-        "type                        1130  non-null values\n",
-        "url                         1109  non-null values\n",
-        "version                     0  non-null values\n",
-        "dtypes: bool(2), int64(2), object(28)"
+        "2     [{u'resource_group_id': u'6f68a42a-4fff-4fe4-8...\n",
+        "9     [{u'resource_group_id': u'44ebf79a-569d-4335-b...\n",
+        "12    [{u'resource_group_id': u'fdb9de34-194b-4c55-b...\n",
+        "14    [{u'resource_group_id': u'71f09202-80aa-4ac2-b...\n",
+        "15    [{u'resource_group_id': u'f3739e1b-7426-46a2-a...\n",
+        "Name: resources, dtype: object"
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
