sqlalchemy record creation working
added notes about what still needs to be done

--- a/ipython_notebook/data_import.ipynb
+++ b/ipython_notebook/data_import.ipynb
@@ -22,6 +22,9 @@
       "import pandas\n",
       "import json\n",
       "import requests\n",
+      "from sqlalchemy import *\n",
+      "from sqlalchemy.orm import create_session\n",
+      "from sqlalchemy.ext.declarative import declarative_base\n",
       "\n",
       "api_url = 'http://opendata.linkdigital.com.au/api/3/'\n",
       "    \n",
@@ -86,16 +89,99 @@
       "\n",
       "#SQLAlchemy\n",
       "# change when making .py file\n",
-      "%run load_schema.py\n",
-      "from sqlalchemy.orm import sessionmaker\n",
-      "Session = sessionmaker(bind=engine)\n",
-      "session = Session()\n",
+      "\n",
+      "user = 'postgres'\n",
+      "password = ''\n",
+      "server = 'localhost'\n",
+      "port = '5432'\n",
+      "database = 'mhv-govhack'\n",
+      "engine = create_engine('postgresql://' + user + ':' + password + '@' + server + ':' + port + '/' + database)\n",
+      "\n",
+      "Base = declarative_base()\n",
+      "metadata = MetaData(bind=engine)\n",
+      "\n",
+      "class DataSet(Base):\n",
+      "    __table__ = Table('dataset', metadata, autoload=True)\n",
+      "\n",
+      "class Coordinate(Base):\n",
+      "    __table__ = Table('coordinate', metadata, autoload=True)\n",
+      "\n",
+      "class DataPoint(Base):\n",
+      "    __table__ = Table('datapoint', metadata, autoload=True)\n",
+      "    \n",
+      "class ResourceMap(Base):\n",
+      "    __table__ = Table('resource_map', metadata, autoload=True)\n",
+      "    \n",
+      "class ResourceText(Base):\n",
+      "    __table__ = Table('resource_text', metadata, autoload=True)\n",
+      "    \n",
+      "class Word(Base):\n",
+      "    __table__ = Table('word', metadata, autoload=True)\n",
+      "    \n",
+      "class Tag(Base):\n",
+      "    __table__ = Table('tag', metadata, autoload=True)\n",
+      "    \n",
+      "class Group(Base):\n",
+      "    __table__ = Table('group', metadata, autoload=True)\n",
       "\n",
       "for key, data_set in data_sets.iterrows():\n",
-      "    print key\n",
-      "    print data_set['resources']\n",
+      "    # fill the dataset table\n",
+      "    dataset = DataSet()  \n",
+      "    dataset.id = data_set['id']\n",
+      "    dataset.api_url = api_url\n",
+      "    dataset.name = data_set['name']\n",
+      "    dataset.provider = data_set['organization']['title']\n",
+      "    dataset.revision_date = data_set['revision_timestamp']\n",
+      "    dataset.revision_id = data_set['revision_id']\n",
+      "    # session.add(dataset)\n",
       "    \n",
-      "    break"
+      "    # TODO: fill the group table\n",
+      "    # TODO: fill the tag table\n",
+      "    \n",
+      "    # fill the resource_text table\n",
+      "    resource_text = ResourceText()\n",
+      "    usable_format = False\n",
+      "    for resource in data_set['resources']:\n",
+      "        # All formats in data_sets = set([u'XML', u'xlsx', u'ZIP', u'plain', u'KML', u'PDF', u'CSV', u'XLS', u'shp'])\n",
+      "        # just start with these, add more if we have time\n",
+      "        # TODO: if there are no valid formats in the data_set, we probably don't want to create the dataset record at all?\n",
+      "        if resource['format'].lower() in ['xml','csv','kml','csv', 'shp']:\n",
+      "            resource_text.id = resource['id']\n",
+      "            resource_text.name = resource['name']\n",
+      "            resource_text.resource_url = resource['url']\n",
+      "            # session.add(resource_text)\n",
+      "            usable_format = True\n",
+      "            \n",
+      "            # TODO: have to get the actual resources here from it's url and then parse it based on type\n",
+      "            \n",
+      "            # TODO: store the parsed data in the other data tables \n",
+      "    break\n",
+      "\n",
+      "# TODO: need to decide where/ how often to do the commit.\n",
+      "# session.commit()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "check the unique types of resources in data_sets ( resources 'format' field)"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "output = set()\n",
+      "for resource in data_sets['resources']:\n",
+      "    for item in resource:\n",
+      "        if item['format'] not in output:\n",
+      "            output.add(item['format'])\n",
+      "print output"
      ],
      "language": "python",
      "metadata": {},
@@ -104,17 +190,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "0\n",
-        "[{u'resource_group_id': u'ce3a9f7d-58d0-44bd-837e-03fe0a3cea7f', u'cache_last_updated': None, u'revision_timestamp': u'2013-05-31T08:51:48.981206', u'webstore_last_updated': None, u'id': u'd85f8d81-b011-4329-9db3-7d3b09761a14', u'size': u'55009998', u'state': u'active', u'hash': u'', u'description': u'', u'format': u'ZIP', u'tracking_summary': {u'total': 0, u'recent': 0}, u'mimetype_inner': None, u'mimetype': u'application/zip', u'cache_url': None, u'name': u'2010-11 datasets.zip', u'created': u'2013-05-31T08:51:46.102508', u'url': u'http://opendata.linkdigital.com.au/storage/f/2013-05-31T08%3A49%3A51.005Z/2010-11-datasets.zip', u'webstore_url': None, u'last_modified': u'2013-05-31T08:51:48.920701', u'position': 0, u'revision_id': u'7cf43cd3-0826-46cc-ae9d-49689d31ec92', u'resource_type': u'file.upload'}]\n"
+        "set([u'XML', u'xlsx', u'ZIP', u'plain', u'KML', u'PDF', u'CSV', u'XLS', u'shp'])\n"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "    "
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
