a bit further on comitting to the database

--- a/ipython_notebook/data_import.ipynb
+++ b/ipython_notebook/data_import.ipynb
@@ -131,15 +131,22 @@
       "    # just start with these, add more if we have time\n",
       "    # TODO: if there are no valid formats in the data_set, we don't want to create the dataset record\n",
       "    for resource in resources:\n",
-      "        if resource['format'].lower() in ['xml','csv','kml','csv', 'shp']:\n",
+      "        if resource['format'].lower() in ['xml','csv','kml', 'shp']:\n",
       "            return True\n",
       "        else:\n",
       "            return False\n",
       "\n",
-      "session.begin()\n",
+      "def text_format(resource):\n",
+      "    if resource['format'].lower() in ['xml','csv']:\n",
+      "        return True\n",
+      "    else:\n",
+      "        return False\n",
+      "        \n",
       "for key, data_set in data_sets.iterrows():\n",
       "    if usable_format(data_set['resources']):\n",
+      "        \n",
       "        # fill the dataset table\n",
+      "        session.begin()\n",
       "        dataset = DataSet()  \n",
       "        dataset.id = data_set['id']\n",
       "        dataset.api_url = api_url\n",
@@ -148,13 +155,15 @@
       "        dataset.revision_date = time.mktime(dateutil.parser.parse(data_set['revision_timestamp']).timetuple())\n",
       "        dataset.revision_id = data_set['revision_id']\n",
       "        session.add(dataset)\n",
+      "        session.commit()\n",
       "        \n",
+      "        session.begin()\n",
       "        # fill the group table\n",
       "        for a_group in data_set['groups']:\n",
       "            group = Group()\n",
       "            # TODO: not sure if we can set the dataset_id outside the loop?\n",
       "            group.dataset_id = data_set['id']\n",
-      "            group.group = a_group\n",
+      "            group.group = a_group['title']\n",
       "            session.add(group)\n",
       "            \n",
       "        # fill the tag table\n",
@@ -162,30 +171,40 @@
       "            tag = Tag()\n",
       "            # TODO: not sure if we can set the dataset_id outside the loop?\n",
       "            tag.dataset_id = data_set['id']\n",
-      "            group.group = a_tag\n",
+      "            tag.tag = a_tag\n",
       "            session.add(tag)\n",
       "        \n",
-      "        # fill the resource_text table \n",
+      "        # fill the resource_text or resource_map table \n",
       "        for resource in data_set['resources']:\n",
-      "            resource_text = ResourceText()\n",
-      "            resource_text.id = resource['id']\n",
-      "            resource_text.dataset_id = data_set['id']\n",
-      "            resource_text.name = resource['name']\n",
-      "            resource_text.resource_url = resource['url']\n",
-      "            resource_text.type = resource['format']\n",
-      "            session.add(resource_text)\n",
-      "            # TODO: have to get the actual resources here from it's url and then parse it based on type\n",
+      "            if text_format(resource):\n",
+      "                resource_text = ResourceText()\n",
+      "                resource_text.id = resource['id']\n",
+      "                resource_text.dataset_id = data_set['id']\n",
+      "                resource_text.name = resource['name']\n",
+      "                resource_text.resource_url = resource['url']\n",
+      "                resource_text.type = resource['format']\n",
+      "                session.add(resource_text)\n",
+      "                # TODO: have to get the actual resources here from it's url and then parse it based on type\n",
+      "                # TODO: store the parsed data in the other data tables \n",
+      "             else:\n",
+      "                resource_map = ResourceMap()\n",
+      "                resource_map.id = resource['id']\n",
+      "                resource_map.dataset_id = data_set['id']\n",
+      "                resource_map.name = resource['name']\n",
+      "                resource_map.resource_url = resource['url']\n",
+      "                resource_map.type = resource['format']\n",
+      "                session.add(resource_map)\n",
+      "                # TODO: have to get the actual resources here from it's url and then parse it based on type\n",
+      "                # TODO: store the parsed data in the other data tables \n",
       "            \n",
-      "            # TODO: store the parsed data in the other data tables \n",
-      "        break\n",
+      "        session.commit()\n",
       "\n",
-      "# TODO: need to decide where/ how often to do the commit.\n",
-      "# session.commit()"
+      "        break\n"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 36
+     "prompt_number": 53
     },
     {
      "cell_type": "markdown",
@@ -426,7 +445,7 @@
       "        dataset.revision_date = time.mktime(dateutil.parser.parse(data_set['revision_timestamp']).timetuple())\n",
       "        dataset.revision_id = data_set['revision_id']\n",
       "        session.add(dataset)\n",
-      "        \n",
+      " \n",
       "        # fill the group table\n",
       "        groups = []\n",
       "        for a_group in data_set['groups']:\n",
@@ -472,7 +491,28 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "data_set['groups'][0]['title']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "pyout",
+       "prompt_number": 51,
+       "text": [
+        "u'GovHack'"
+       ]
+      }
+     ],
+     "prompt_number": 51
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "resource['url']"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
