added description field

--- a/ipython_notebook/data_import.ipynb
+++ b/ipython_notebook/data_import.ipynb
@@ -62,7 +62,7 @@
       "\t# 'metadata_created',\n",
       "\t# 'metadata_modified',\n",
       "\t'name',\n",
-      "\t# 'notes',\n",
+      "\t'notes',\n",
       "\t'num_resources',\n",
       "\t'num_tags',\n",
       "\t'organization',\n",
@@ -122,9 +122,9 @@
       "def usable_format(resources):\n",
       "    # All formats in data_sets = set([u'XML', u'xlsx', u'ZIP', u'plain', u'KML', u'PDF', u'CSV', u'XLS', u'shp'])\n",
       "    # just start with these, add more if we have time\n",
-      "    # TODO: if there are no valid formats in the data_set, we don't want to create the dataset record\n",
+      "    # if there are no valid formats in the data_set, we don't want to create the dataset record\n",
       "    for resource in resources:\n",
-      "        if resource['format'].lower() in ['xml','csv','kml', 'shp']:\n",
+      "        if resource['format'].lower() in ['csv','kml']:\n",
       "            return True\n",
       "        else:\n",
       "            return False\n",
@@ -148,10 +148,12 @@
       "        dataset.provider = data_set['organization']['title']\n",
       "        dataset.revision_date = time.mktime(dateutil.parser.parse(data_set['revision_timestamp']).timetuple())\n",
       "        dataset.revision_id = data_set['revision_id']\n",
+      "        if note.startswith('    \\n\\n'):\n",
+      "            note = note.replace('    \\n\\n','')\n",
+      "            note = note[0:note.find('\\n\\n')]\n",
+      "        dataset.description = note\n",
       "        session.add(dataset)\n",
-      "        # TODO: add field to database\n",
-      "        # dataset.description = data_set['notes'] up to the second new line\n",
-      "\n",
+      "        \n",
       "        try:\n",
       "            session.commit()\n",
       "        except SQLAlchemyError: # already exists (hopefully)\n",
@@ -201,7 +203,7 @@
       "                    resource_text.row_headers = ', '.join([str(x) for x in df.index.tolist()])\n",
       "                    # TODO: parsed wordcount\n",
       "                elif resource['format'].lower() == 'xml':\n",
-      "                    # TODO\n",
+      "                    # TODO (later)\n",
       "                    None\n",
       "                else:\n",
       "                    print 'unexpected text format:', resource['format']\n",
@@ -216,8 +218,12 @@
       "                resource_map.type = resource['format']\n",
       "                session.add(resource_map)\n",
       "                # TODO: have to get the actual resources here from it's url and then parse it based on type\n",
-      "                # TODO: store the parsed data in the other data tables \n",
-      "            \n",
+      "                if resource['format'].lower() == 'kml':\n",
+      "                    # TODO: parse kml data and fill datapoint and coordinate tables\n",
+      "                    None\n",
+      "                else:\n",
+      "                    print 'unexpected text format:', resource['format']\n",
+      "\n",
       "        session.commit()\n",
       "\n",
       "        break\n"
@@ -225,7 +231,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 26
+     "prompt_number": 81
     },
     {
      "cell_type": "heading",
@@ -345,25 +351,6 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "resource['url']"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 54,
-       "text": [
-        "u'http://opendata.linkdigital.com.au/storage/f/2013-05-31T00%3A37%3A49.326Z/workforce-profile.csv'"
-       ]
-      }
-     ],
-     "prompt_number": 54
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
       "df = pandas.DataFrame.from_csv(resource['url'])\n",
       "columns_header = df.columns.tolist()\n",
       "row_names = df.index.tolist()\n",
@@ -384,94 +371,6 @@
       }
      ],
      "prompt_number": 96
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "', '.join([str(x) for x in df.columns.tolist()])"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 99,
-       "text": [
-        "'Full-Time, Unnamed: 2, Part-Time, Unnamed: 4, Temporary , Unnamed: 6, Total'"
-       ]
-      }
-     ],
-     "prompt_number": 99
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "', '.join([str(x) for x in df.index.tolist()])"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 100,
-       "text": [
-        "'Age,  < 25, 25 - 34, 35 - 44, 45 - 54, 55 - 64, 65 +, nan'"
-       ]
-      }
-     ],
-     "prompt_number": 100
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "print data_set['title']"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "City of Gold Coast \u2013 Workforce Profile\n"
-       ]
-      }
-     ],
-     "prompt_number": 9
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "data_set"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 11,
-       "text": [
-        "groups                [{u'capacity': u'public', u'description': u'A ...\n",
-        "id                                 78496106-9fb1-4828-90c1-86e9ab7afd10\n",
-        "name                               city-of-gold-coast-workforce-profile\n",
-        "num_resources                                                         1\n",
-        "num_tags                                                              0\n",
-        "organization          {u'description': u'', u'created': u'2013-05-31...\n",
-        "resources             [{u'resource_group_id': u'4cfda3f5-667f-445f-8...\n",
-        "revision_id                        737e04a9-e6c6-4149-80b2-7f6f9b471df4\n",
-        "revision_timestamp                           2013-05-31T00:38:07.568652\n",
-        "tags                                                                 []\n",
-        "title                            City of Gold Coast \u2013 Workforce Profile\n",
-        "type                                                            dataset\n",
-        "Name: 3, dtype: object"
-       ]
-      }
-     ],
-     "prompt_number": 11
     },
     {
      "cell_type": "code",
