--- a/ipython_notebook/code_cleanup.ipynb
+++ b/ipython_notebook/code_cleanup.ipynb
@@ -11,6 +11,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# not working yet\n",
       "import pandas\n",
       "import json\n",
       "import requests\n",
@@ -49,16 +50,15 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[ARNI] Data has been terminated!\n"
-       ]
-      }
-     ],
-     "prompt_number": 6
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
